# stm32hal-with-input

./: .embed.toml  Cargo.toml
src/: main.rs
