[package]
name = "with_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.12"
stm32h7xx-hal = {version = "0.12.1", features = ["stm32h735","rt"]}
log = "0.4.11"

panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }